unpackaged/main/default/objects/ForceeaSetting__mdt/fields/MaxErrorRecordsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>MaxErrorRecordsToDisplay__c</fullName>
    <defaultValue>20</defaultValue>
    <description>The maximum number of error records to display.</description>
    <inlineHelpText>The maximum number of error records to display.</inlineHelpText>
    <label>Max error records to display</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>