unpackaged/main/default/objects/ForceeaSetting__mdt/fields/RecordsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>RecordsToDisplay__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The number of created records to display.</description>
    <inlineHelpText>The number of created records to display.</inlineHelpText>
    <label>Records to display</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>