unpackaged/main/default/objects/ForceeaSetting__mdt/fields/ShowDebugLog__c.field-meta.xml
<CustomField>
    <fullName>ShowDebugLog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Display messages in Debug Log.</description>
    <inlineHelpText>Display messages in Debug Log.</inlineHelpText>
    <label>Show debug log</label>
    <type>Checkbox</type>
</CustomField>